examples/error/NoMain.c
int funzione(){
	int a;
	float b;
	
	a = b;	
}
